@@ -26,7 +26,7 @@ import vsd, vsdchunks,vsdstream4
 import xls, vba, ole, doc
 import emfparse,svm,mf,wmfparse,cdr,emfplus,rx2,fhparse
 
-version = "0.5.57"
+version = "0.5.58"
 
 ui_info = \
 '''<ui>
@@ -602,7 +602,7 @@ class ApplicationMainWindow(gtk.Window):
 						rx2.rx2_ids[ntype[1]](hd,data)
 				elif ntype[0] == "fh":
 					if fhparse.hdp.has_key(ntype[1]):
-						fhparse.hdp[ntype[1]](hd,data)
+						fhparse.hdp[ntype[1]](hd,data,self.das[pn])
 
 	def hdscroll_cb(self,view,event):
 		pn = self.notebook.get_current_page()
@@ -670,10 +670,10 @@ class ApplicationMainWindow(gtk.Window):
 		if len(buf) == 2:
 			txt = "LE: %s\tBE: %s"%(struct.unpack("<h",buf)[0],struct.unpack(">h",buf)[0])
 			if type == "FH" and self.das[pn].dict.has_key(struct.unpack(">h",buf)[0]):
-				txt += "\t"+self.das[pn].dict[struct.unpack(">h",buf)[0]]
+				txt = "BE: %s\t"%(struct.unpack(">h",buf)[0])+self.das[pn].dict[struct.unpack(">h",buf)[0]]
 			if type == "FH":
 				v = struct.unpack(">H",buf)[0]
-				txt += "\tX: %d Y: %d"%(v-1692,v-1584)
+				txt = "BE: %s\tX: %d\tY: %d"%(struct.unpack(">h",buf)[0],v-1692,v-1584)
 			self.update_statusbar(txt)
 		if len(buf) == 4:
 			txt = "LE: %s\tBE: %s"%(struct.unpack("<i",buf)[0],struct.unpack(">i",buf)[0])
@@ -683,7 +683,7 @@ class ApplicationMainWindow(gtk.Window):
 			if type == "FH":
 				v1 = struct.unpack(">H",buf[0:2])[0]
 				v2 = struct.unpack(">H",buf[2:4])[0]
-				txt += "\tX: %.4f Y: %.4f"%(v1-1692+v2/65536.,v1-1584+v2/65536.)
+				txt = "BE: %s\tX: %.4f\tY: %.4f"%(struct.unpack(">i",buf)[0],v1-1692+v2/65536.,v1-1584+v2/65536.)
 
 			self.update_statusbar(txt)
 		if len(buf) == 8:
@@ -695,11 +695,14 @@ class ApplicationMainWindow(gtk.Window):
 			self.update_statusbar(txt)
 		if len(buf)>3 and len(buf)%2 == 0:
 			try:
-				utxt = unicode(buf,"utf16")
-				txt += "  " +utxt
+				if type == "FH":
+					utxt = unicode(buf,"utf-16be")
+				else:
+					utxt = unicode(buf,"utf16")
+				txt += "\t" +utxt
 				self.update_statusbar(txt)
 			except:
-				print "Failed unicode convertion"
+				pass
 		
 
 	def activate_new (self,parent=None):
