@@ -1,3 +1,7 @@
+2011-09-15  Valek Filippov
+
+		* FH: link to XForm in Rectangle and Oval.
+
 2011-09-11  Valek Filippov
 
 		* FH: Parse coords for Rectangle and Oval, minimal BasicLine parsing.
